fixup! fixup! fixup! fixup! tool: auto publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tree-sitter-ink"
+name = "tree-sitter-ink-lbz"
 description = "werk"
 version = "0.0.0"
 authors = ["Freddie Gilbraith <freddie.gilbraith@littlebonsai.co.uk>"]
